fix info message icon color in dark mode

--- a/src/components/InformationMessage/InformationMessage.module.css
+++ b/src/components/InformationMessage/InformationMessage.module.css
@@ -1,7 +1,7 @@
 .icon {
   width: 50px;
   height: 50px;
-  fill: var(--text-primary);
+  fill: var(--text-secondary);
   stroke-width: 0;
 }
 
